fixed jumping on drag problem

--- a/jbook/src/components/preview.css
+++ b/jbook/src/components/preview.css
@@ -6,7 +6,6 @@
 
 .preview-wrapper iframe {
   height: 100%;
-  background: blueviolet;
   width: 100%;
 }
 
